Change GitHub token in index.html
Updated GitHub token for authentication.

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
         // REPLACE THESE VALUES WITH YOUR ACTUAL CREDENTIALS
         const ABLY_API_KEY = 'durKGQ.WtBhaA:gNEegxAlZu388_eElwwtvTWwIIkli3Y-A2uAxVQqnPE'; // Try this or get new from ably.com
         const CHANNEL_NAME = 'global-chat-v3';
-        const GITHUB_TOKEN = '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';
+        const GITHUB_TOKEN = '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';
         const REPO_OWNER = 'ZackTR777';
         const REPO_NAME = 'OnlineChatZ';
         
@@ -731,7 +731,7 @@
                 });
                 
                 if (response.ok) {
-                    statusEl.innerHTML = '✅ Connected to GitHub database';
+                    statusEl.innerHTML = '✅ Connected';
                     statusEl.style.color = '#4CAF50';
                     return true;
                 } else if (response.status === 404) {
